2005-11-08  H.J. Lu  <hongjiu.lu@intel.com>

	* m32c-desc.c: Regenerated.

2005-11-08  Nathan Sidwell  <nathan@codesourcery.com>

	Add ms2.
	* ms1-asm.c, ms1-desc.c, ms1-desc.h, ms1-dis.c, ms1-ibld.c,
	ms1-opc.c, ms1-opc.h: Regenerated.

2005-11-07  Steve Ellcey  <sje@cup.hp.com>

	* configure: Regenerate after modifying bfd/warning.m4.

2005-11-07  Alan Modra  <amodra@bigpond.net.au>

	* i386-dis.c (ckprefix): Handle rex on fwait.  Don't print
	ignored rex prefixes here.
	(print_insn): Instead, handle them similarly to fwait followed
	by non-fp insns.

2005-11-02  H.J. Lu  <hongjiu.lu@intel.com>

	* iq2000-desc.c: Regenerated.
	* iq2000-desc.h: Likewise.
	* iq2000-dis.c: Likewise.
	* iq2000-opc.c: Likewise.

2005-11-02  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (print_insn_thumb32): Word align blx target address.

2005-10-31  Alan Modra  <amodra@bigpond.net.au>

	* arm-dis.c (print_insn): Warning fix.

2005-10-30  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerated.

	* dep-in.sed: Replace " ./" with " ".

2005-10-28  Dave Brolley  <brolley@redhat.com>

	* All CGEN-generated sources: Regenerate.

	Contribute the following changes:
	2005-09-19  Dave Brolley  <brolley@redhat.com>

	* disassemble.c (disassemble_init_for_target): Add 'break' to case for
	bfd_arch_tic4x. Use cgen_bitset_create and cgen_bitset_set for
	bfd_arch_m32c case.

	2005-02-16  Dave Brolley  <brolley@redhat.com>

	* cgen-dis.in: Rename CGEN_ISA_MASK to CGEN_BITSET. Rename
	cgen_isa_mask_* to cgen_bitset_*.
	* cgen-opc.c: Likewise.

	2003-11-28  Richard Sandiford  <rsandifo@redhat.com>

	* cgen-dis.in (print_insn_@arch@): Fix comparison with cached isas.
	* *-dis.c: Regenerate.

	2003-06-05  DJ Delorie	<dj@redhat.com>

	* cgen-dis.in (print_insn_@arch@): Copy prev_isas, don't assign
	it, as it may point to a reused buffer.	Set prev_isas when we
	change cpus.

	2002-12-13  Dave Brolley  <brolley@redhat.com>
